# python-cicd-demo

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
python_cicd_demo/: main.py  myclass.py
tests/: test_main.py  test_myclass.py
